--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 :root{
     --curved-border: 10px;
-    --mobile-column-template: 1fr 1fr;
     --head-border:2px solid rgb(219, 216, 216);
+    --bg-color: rgb(241, 241, 241);
+    --border-color: rgb(219, 216, 216);
 }
 
 
@@ -11,7 +12,7 @@ html{
 body{
     width: 90%;
 margin: auto;
-background-color: rgb(241, 241, 241);
+background-color: var(--bg-color);
 
 }
 
@@ -41,16 +42,14 @@ h1{ font-size: 1.5em;}
     grid-auto-rows: minmax(100px, auto);
 
 
-    border: rgb(219, 216, 216) 1.5px solid;
+    border: var(--border-color) 1.5px solid;
     border-radius:  var(--curved-border);
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 5px 10px rgba(38, 36, 36, 0.1);
 }
 
 
-.img-2{ 
-   
-}
+
 header{
     
     width: fit-content;
@@ -63,8 +62,15 @@ header{
 header p {
     white-space: pre-wrap;
 }
+footer{
+    width: 100%;
+    height: 100%;
 
-
+}
+footer p{ 
+    color: grey;
+   float: right;
+}
 @media (m-width: 0px){
     #grid-wrap{
         grid-template-columns:  1fr;
