--- a/style.css
+++ b/style.css
@@ -1,175 +1,163 @@
-:root{
-    --curved-border: 10px;
-    --head-border:2px solid rgb(219, 216, 216);
-    --bg-color: rgb(241, 241, 241);
-    --border-color: rgb(219, 216, 216);
-    --font-forum: 'Forum', cursive;
-    --font-gloria: 'Gloria Hallelujah', cursive;
-    --font-arimo: 'Arimo', sans-serif;
+:root {
+  --curved-border: 10px;
+  --head-border: 2px solid rgb(219, 216, 216);
+  --bg-color: rgb(241, 241, 241);
+  --border-color: rgb(219, 216, 216);
+  --font-forum: "Forum", cursive;
+  --font-gloria: "Gloria Hallelujah", cursive;
+  --font-arimo: "Arimo", sans-serif;
 }
 
-
-html{
+html {
   margin-top: 50px;
 }
-body{
-  
-   
+body {
   width: 90%;
-margin: auto;
-background-color: var(--bg-color);
-
+  margin: auto;
+  background-color: var(--bg-color);
 }
 
-h1{ font-size: 1.8em;
-font-family: var(--font-gloria);}
-
-
-[class^="img-"]{
-    border-radius:  var(--curved-border);
-    margin: auto;
-    
-}
-[class^="img-"]:hover{
-    box-shadow: 0px 0px 10px 2px rgba(158, 158, 215, 0.5);
+h1 {
+  font-size: 1.8em;
+  
+  font-family: var(--font-gloria);
 }
 
-#grid-wrap{
-   padding-top: 100px;
-     margin: auto;
-     height: 80%;
-    width: fit-content;
-    justify-content: center;
-    align-items: center;
-    padding: 15px;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-row-gap: .5em;
-    grid-column-gap: 1.5em;
- 
-
-
-    border: var(--border-color) 1.5px solid;
-    border-radius:  var(--curved-border);
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 5px 10px rgba(38, 36, 36, 0.1);
+[class^="img-"] {
+  border-radius: var(--curved-border);
+  margin: auto;
+}
+[class^="img-"]:hover {
+  box-shadow: 0px 0px 10px 2px rgba(158, 158, 215, 0.5);
 }
 
-.img-1{
-    
+#grid-wrap {
+  padding-top: 100px;
+  margin: auto;
+  height: 80%;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-row-gap: 0.5em;
+  grid-column-gap: 1.5em;
+
+  border: var(--border-color) 1.5px solid;
+  border-radius: var(--curved-border);
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 5px 10px rgba(38, 36, 36, 0.1);
 }
 
-.img-3{
-
-
-}
-.img-4  {
-
-}
-.img-5{
-
-}
-.img-6{
-
-
-}
-.img-7{
-
-}
-.img-8{
- 
-
-}
-.img-9{
-
+.img-1 {
 }
 
-header{
-    
-    width: fit-content;
-   
-    padding: 15px;
-    padding-bottom: 25px;
-    border-bottom: var(--head-border);
-    border-radius:  var(--curved-border);
+.img-3 {
+}
+.img-4 {
+}
+.img-5 {
+}
+.img-6 {
+}
+.img-7 {
+}
+.img-8 {
+}
+.img-9 {
+}
+
+header {
+  width: fit-content;
+
+  padding: 15px;
+  padding-bottom: 25px;
+  border-bottom: var(--head-border);
+  border-radius: var(--curved-border);
 }
 header p {
-    font-family: var(--font-arimo);
-    font-size: .8em;
-    white-space: pre-wrap;
-    
+  font-family: var(--font-arimo);
+  font-size: 0.8em;
+  white-space: pre-wrap;
 }
-footer{
-
+footer {
   padding-right: 30px;
- 
-
-
 }
-footer p{ 
-    color: grey;
-    float: right;
+footer p {
+  color: grey;
+  float: right;
 }
-@media (min-width: 0px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr;
-    }
-    header {
-        grid-column: 1 / span 2;
-    }
-    [class^="img-"]{
-        width: 90%;
-    }
-
-
-    
-   
+@media (min-width: 0px) {
+  #grid-wrap {
+    grid-template-columns: 1fr 1fr;
+  }
+  header {
+    grid-column: 1 / span 2;
+  }
+  [class^="img-"] {
+    width: 100%;
+  }
+  html, body{
+      width:99%;
+      margin: 0 auto;
+      padding: 0;
+  }
+  header h1 {
+    text-align: center;
+  }
 }
-@media (min-width: 460px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr;
-    
-    }
-    header {
-        grid-column: 1 / span 2;
-    }
- 
-}
-
-
-@media (min-width: 720px){
-    #grid-wrap{
-        width: fit-content;
-        grid-template-columns:  1fr 1fr 1fr ;
-    }
-    header{ 
-        grid-column: 1 / span 3;
-    }
+@media (min-width: 460px) {
+  #grid-wrap {
+    grid-template-columns: 1fr 1fr;
+  }
+  header {
+    grid-column: 1 / span 2;
+  }
+  html {
+    margin-top: 10px;
+  }
+  body {
+   margin: auto;
+   width:80%;
+  }
 }
 
-
-@media (min-width: 900px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr 1fr ;
-        
-    }
-    header{ 
-        grid-column: 1 / span 1;
-        grid-row: 1 / span 6;
-        min-width: 200px;
-        max-width: 200px;
-        border-bottom: none;
-        border-right: var(--head-border);
-
-    }
-    
+@media (min-width: 720px) {
+  #grid-wrap {
+    width: fit-content;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  header {
+    grid-column: 1 / span 3;
+  }
+  html {
+    margin-top: 20px;
+  }
 }
 
-@media (min-width: 1200px){
-    #grid-wrap{
-        grid-template-columns:  1fr  1fr 1fr 1fr ;
-    }
-    /* 
+@media (min-width: 900px) {
+  #grid-wrap {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  header {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 6;
+    min-width: 200px;
+    max-width: 200px;
+    border-bottom: none;
+    border-right: var(--head-border);
+  }
+}
+
+@media (min-width: 1200px) {
+  #grid-wrap {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .img-0{
+      grid-column-start: 3;
+  }
+  /* 
     .img-9{
         grid-column: 4;
         grid-row: 3 /span 2;
