--- a/style.css
+++ b/style.css
@@ -1,266 +1,242 @@
 :root {
-  --curved-border: 10px;
-  --head-border: 2px solid rgb(219, 216, 216);
-  --bg-color: rgb(241, 241, 241);
-  --border-color: rgb(219, 216, 216);
-  --font-forum: "Forum", cursive;
-  --font-gloria: "Gloria Hallelujah", cursive;
-  --font-arimo: "Arimo", sans-serif;
-}
-
-html {
-  margin-top: 50px;
-}
-body {
-  width: 90%;
-  margin: auto;
-  background-color: var(--bg-color);
-}
-
-h1 {
-  font-size: 1.8em;
+    --curved-border: 10px;
+    --head-border: 2px solid rgb(219, 216, 216);
+    --bg-color: rgb(241, 241, 241);
+    --border-color: rgb(219, 216, 216);
+    --font-forum: "Forum", cursive;
+    --font-gloria: "Gloria Hallelujah", cursive;
+    --font-arimo: "Arimo", sans-serif;
+  }
   
-  font-family: var(--font-gloria);
-}
-
-[class^="img-"] {
-  border-radius: var(--curved-border);
-  margin: auto;
-}
-[class^="img-"]:hover {
-  box-shadow: 0px 0px 10px 2px rgba(158, 158, 215, 0.5);
-}
-
-#grid-wrap {
-  padding-top: 100px;
-  margin: auto;
-  height: 80%;
-  width: fit-content;
-  justify-content: center;
-  align-items: center;
-  padding: 15px;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-row-gap: 0.5em;
-  grid-column-gap: 1.5em;
-
-  border: var(--border-color) 1.5px solid;
-  border-radius: var(--curved-border);
-  background-color: rgb(255, 255, 255);
-  box-shadow: 0px 5px 10px rgba(38, 36, 36, 0.1);
-}
-
-.img-1 {
-}
-
-.img-3 {
-}
-.img-4 {
-}
-.img-5 {
-}
-.img-6 {
-}
-.img-7 {
-}
-.img-8 {
-}
-.img-9 {
-}
-
-header {
-  width: fit-content;
-
-  padding: 15px;
-  padding-bottom: 25px;
-  border-bottom: var(--head-border);
-  border-radius: var(--curved-border);
-}
-<<<<<<< HEAD
-header p {
-  font-family: var(--font-arimo);
-  font-size: 0.8em;
-  white-space: pre-wrap;
-=======
-footer p{ 
-    color: grey;
-    float: right;
-}
-@media (min-width: 0px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr;
-    }
-    header {
-        grid-column: 1 / span 2;
-    }
-    [class^="img-"]{
-        width: 100%;
-    }
-
-
-    
-   
-}
-@media (min-width: 460px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr;
-    
-    }
-    header {
-        grid-column: 1 / span 2;
-    }
- 
-}
-
-
-@media (min-width: 720px){
-    #grid-wrap{
-        width: fit-content;
-        grid-template-columns:  1fr 1fr 1fr ;
-    }
-    header{ 
-        grid-column: 1 / span 3;
-    }
->>>>>>> d71121489440e8f1706519f4a70917cf9521d01b
-}
-footer {
-  padding-right: 30px;
-}
-footer p {
-  color: grey;
-  float: right;
-}
-@media (min-width: 0px) {
-  #grid-wrap {
-    grid-template-columns: 1fr 1fr;
-  }
-  header {
-    grid-column: 1 / span 2;
-  }
-  [class^="img-"] {
-    width: 100%;
-  }
-  html, body{
-      width:99%;
-      margin: 0 auto;
-      padding: 0;
-  }
-  header h1 {
-    text-align: center;
-  }
-}
-@media (min-width: 460px) {
-  #grid-wrap {
-    grid-template-columns: 1fr 1fr;
-  }
-  header {
-    grid-column: 1 / span 2;
-  }
   html {
-    margin-top: 10px;
+    margin-top: 50px;
   }
   body {
-   margin: auto;
-   width:80%;
+    width: 90%;
+    margin: auto;
+    background-color: var(--bg-color);
   }
-}
-
-@media (min-width: 720px) {
-  #grid-wrap {
-    width: fit-content;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  header {
-    grid-column: 1 / span 3;
-  }
-  html {
-    margin-top: 20px;
-  }
-}
-
-@media (min-width: 900px) {
-  #grid-wrap {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-  header {
-    grid-column: 1 / span 1;
-    grid-row: 1 / span 6;
-    min-width: 200px;
-    max-width: 200px;
-    border-bottom: none;
-    border-right: var(--head-border);
-  }
-}
-
-@media (min-width: 1200px) {
-  #grid-wrap {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-  .img-0{
-      grid-column-start: 3;
-  }
-  /* 
-    .img-9{
-        grid-column: 4;
-        grid-row: 3 /span 2;
-    }
-    .img-4 {
-        grid-column: 4;
-        grid-row:  1 /span 2;
-    }
-   .img-7{ 
-    grid-column: 4;
-    grid-row:  2 /span 2;
-   }
-
-
-}
-
-@media (min-width: 1640px){
-    #grid-wrap{
-        grid-template-columns:  1fr 1fr 1fr 1fr 1fr ;
   
-    }
-    footer{
-        width:100%;
+  h1 {
+    font-size: 1.8em;
+    
+    font-family: var(--font-gloria);
+  }
+  
+  [class^="img-"] {
+    border-radius: var(--curved-border);
+    margin: auto;
+  }
+  [class^="img-"]:hover {
+    box-shadow: 0px 0px 10px 2px rgba(158, 158, 215, 0.5);
+  }
+  
+  #grid-wrap {
+    padding-top: 100px;
+    margin: auto;
+    height: 80%;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-row-gap: 0.5em;
+    grid-column-gap: 1.5em;
+  
+    border: var(--border-color) 1.5px solid;
+    border-radius: var(--curved-border);
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0px 5px 10px rgba(38, 36, 36, 0.1);
+  }
+  
+  .img-1 {
+  }
+  
+  .img-3 {
+  }
+  .img-4 {
+  }
+  .img-5 {
+  }
+  .img-6 {
+  }
+  .img-7 {
+  }
+  .img-8 {
+  }
+  .img-9 {
+  }
+  
+  header {
+    width: fit-content;
+  
+    padding: 15px;
+    padding-bottom: 25px;
+    border-bottom: var(--head-border);
+    border-radius: var(--curved-border);
+  }
+  header p {
+    font-family: var(--font-arimo);
+    font-size: 0.8em;
+    white-space: pre-wrap;
+  }
+  footer {
+    padding-right: 30px;
+  }
+  footer p {
+  
+    float: right;
+  }
+  footer a {
+    text-decoration: none;
+    color: grey;
+    text-decoration-color: inherit;
+  }
+  /* @keyframes foot{
+    0%{ }
+    50%{}
+    100%{}
+  
+  } */
+  footer a:hover{
 
-     
-    }
+   /* animation: foot; */
+      
 
-
-    .img-2{
-        grid-column: 3/ span 1;
-        grid-row: 1 / span 3;
+  }
+  @media (min-width: 0px) {
+    #grid-wrap {
+      grid-template-columns: 1fr 1fr;
     }
-    .img-3{
-        grid-column: 4;
-        grid-row: 1 / span 2;
+    header {
+      grid-column: 1 / span 2;
     }
-    .img-4{
-        grid-row: 1 ;
-        grid-column: 5;
+    [class^="img-"] {
+      width: 100%;
     }
-    .img-5{
-        grid-column: 3/ span 1;
-        grid-row: 3/ span 2;
+    html, body{
+        width:99%;
+        margin: 0 auto;
+        padding: 0;
     }
-   .img-0{
-       grid-column: 4 / span 1;
-       grid-row: 2/ span 3;
-   } 
-   .img-6{
-       grid-row: 4 / span 1;
-       grid-column: 2/ span 1;
-   }
-   .img-7{
-       grid-column: 5 ;
-       grid-row: 3 / span 2;
-   }
-   .img-8{
-       grid-row: 2 / span 2;
-   }
-   .img-9{
-       grid-column: 5;
-       grid-row: 2 /span 1;
-   }  */
-}
+    header h1 {
+      text-align: center;
+    }
+  }
+  @media (min-width: 460px) {
+    #grid-wrap {
+      grid-template-columns: 1fr 1fr;
+    }
+    header {
+      grid-column: 1 / span 2;
+    }
+    html {
+      margin-top: 10px;
+    }
+    body {
+     margin: auto;
+     width:80%;
+    }
+  }
+  
+  @media (min-width: 720px) {
+    #grid-wrap {
+      width: fit-content;
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    header {
+      grid-column: 1 / span 3;
+    }
+    html {
+      margin-top: 20px;
+    }
+  }
+  
+  @media (min-width: 900px) {
+    #grid-wrap {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+    header {
+      grid-column: 1 / span 1;
+      grid-row: 1 / span 6;
+      min-width: 200px;
+      max-width: 200px;
+      border-bottom: none;
+      border-right: var(--head-border);
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    #grid-wrap {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    .img-0{
+        grid-column-start: 3;
+    }
+    /* 
+      .img-9{
+          grid-column: 4;
+          grid-row: 3 /span 2;
+      }
+      .img-4 {
+          grid-column: 4;
+          grid-row:  1 /span 2;
+      }
+     .img-7{ 
+      grid-column: 4;
+      grid-row:  2 /span 2;
+     }
+  
+  
+  }
+  
+  @media (min-width: 1640px){
+      #grid-wrap{
+          grid-template-columns:  1fr 1fr 1fr 1fr 1fr ;
+    
+      }
+      footer{
+          width:100%;
+  
+       
+      }
+  
+  
+      .img-2{
+          grid-column: 3/ span 1;
+          grid-row: 1 / span 3;
+      }
+      .img-3{
+          grid-column: 4;
+          grid-row: 1 / span 2;
+      }
+      .img-4{
+          grid-row: 1 ;
+          grid-column: 5;
+      }
+      .img-5{
+          grid-column: 3/ span 1;
+          grid-row: 3/ span 2;
+      }
+     .img-0{
+         grid-column: 4 / span 1;
+         grid-row: 2/ span 3;
+     } 
+     .img-6{
+         grid-row: 4 / span 1;
+         grid-column: 2/ span 1;
+     }
+     .img-7{
+         grid-column: 5 ;
+         grid-row: 3 / span 2;
+     }
+     .img-8{
+         grid-row: 2 / span 2;
+     }
+     .img-9{
+         grid-column: 5;
+         grid-row: 2 /span 1;
+     }  */
+  }
+  
